# sbb_ocr_conf_eval

./: .gitignore  Makefile  PPN.list.2024-09-06  README.md  generate-confs.sh  merged_mods_info_df_2024-09-25.csv  merged_mods_info_df_2025-03-07.csv  merged_mods_info_df_2025-03-24.csv  merged_mods_info_df_2025-03-26.csv  metadata.csv  ocr_wc_analysis.py  ppn2kitodo_cache.json  ppns_pipeline_batch_01_2024.txt  pyproject.toml  requirements.txt  sample_confs.csv
PPN740124749/: mets.xml  sbb-mets-PPN740124749.xml
PPN740124749/ALTO/: FILE_0001_ALTO.xml  FILE_0002_ALTO.xml  FILE_0003_ALTO.xml  FILE_0004_ALTO.xml  FILE_0005_ALTO.xml  FILE_0006_ALTO.xml  FILE_0007_ALTO.xml  FILE_0008_ALTO.xml  FILE_0009_ALTO.xml  FILE_0010_ALTO.xml  FILE_0011_ALTO.xml  FILE_0012_ALTO.xml  FILE_0013_ALTO.xml  FILE_0014_ALTO.xml  FILE_0015_ALTO.xml  FILE_0016_ALTO.xml  FILE_0017_ALTO.xml  FILE_0018_ALTO.xml  FILE_0019_ALTO.xml  FILE_0020_ALTO.xml  FILE_0021_ALTO.xml  FILE_0022_ALTO.xml  FILE_0023_ALTO.xml  FILE_0024_ALTO.xml  FILE_0025_ALTO.xml
PPN740124749/TESS/: FILE_0001_TESS.xml  FILE_0002_TESS.xml  FILE_0003_TESS.xml  FILE_0004_TESS.xml  FILE_0005_TESS.xml  FILE_0006_TESS.xml  FILE_0007_TESS.xml  FILE_0008_TESS.xml  FILE_0009_TESS.xml  FILE_0010_TESS.xml  FILE_0011_TESS.xml  FILE_0012_TESS.xml  FILE_0013_TESS.xml  FILE_0014_TESS.xml  FILE_0015_TESS.xml  FILE_0016_TESS.xml  FILE_0017_TESS.xml  FILE_0018_TESS.xml  FILE_0019_TESS.xml  FILE_0020_TESS.xml  FILE_0021_TESS.xml  FILE_0022_TESS.xml  FILE_0023_TESS.xml  FILE_0024_TESS.xml  FILE_0025_TESS.xml
src/sbb_ocr/: cli.py  extract_confs.py  (+2 more)
